--- a/chat.css
+++ b/chat.css
@@ -64,8 +64,8 @@ body {
     color: rgb(39, 38, 38) !important;/*สีชื่อของคนสมัครสมาชิก*/
   }
   #author-name.yt-live-chat-author-chip {
-    background-color: rgb(57, 58, 56) ;/*สีพื้นหลังของชื่อของคนธรรรมดา*/
-    border: rgba(35, 34, 34, 0.993) 4px solid !important;/*สีขอบของพื้นหลังชื่อ*/
+    background-color: rgb(74, 200, 2) ;/*สีพื้นหลังของชื่อของคนธรรรมดา*/
+    border: rgba(15, 177, 79, 0.993) 4px solid !important;/*สีขอบของพื้นหลังชื่อ*/
     color: rgb(39, 38, 38) ;/*สีชื่อของคนธรรมดา*/
   }
   #author-name.yt-live-chat-author-chip /*รูปทรงพื้นหลังชื่อ*/ {
@@ -97,6 +97,10 @@ body {
    yt-live-chat-text-message-renderer #message {
     /*ถ้าไม่ต้องการให้อยู่คนละบรรทัดให้ลบส่วนนี้ไปได้เลย*/
     display: block !important;
+   }
+  
+   yt-live-chat-text-message-renderer[whole-message-clickable] #message {
+    top: 10px !important;
    }
   
    yt-live-chat-text-message-renderer[whole-message-clickable] #message {
